--- a/styles/collapseList.module.css
+++ b/styles/collapseList.module.css
@@ -1,5 +1,6 @@
 .parentWrapper {
     border: 2px blue solid;
+    list-style: none;
 }
 
 /* .childrenWrapper {
@@ -15,7 +16,8 @@
 } */
 
 .childrenWrapper {
-    height: 0px;
+    /* height: 0px;
     transition: height 0.3s ease;
-    overflow: hidden;
+    overflow: hidden; */
+    border: 2px red dotted;
 }
