--- a/styles/collapseList.module.css
+++ b/styles/collapseList.module.css
@@ -1,23 +1,21 @@
 .parentWrapper {
     border: 2px blue solid;
     list-style: none;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
-/* .childrenWrapper {
-    border: 2px red dotted;
-    height: 0;
-    transition: height 0.15s ease-out;
-    overflow: hidden;
-} */
-
-/* .collapsedChildrenWrapper {
-    height: 100%;
-    transition: height 0.15s ease-in;
-} */
+.parentWrapper[open] {
+    background-color: yellow;
+}
 
 .childrenWrapper {
     /* height: 0px;
     transition: height 0.3s ease;
     overflow: hidden; */
+    cursor: pointer;
     border: 2px red dotted;
 }
